Header container margin-left/right auto. Update footer to prevent overflow issue on iOS safari

--- a/css/parts/_buttons.css
+++ b/css/parts/_buttons.css
@@ -237,47 +237,60 @@ input[type=button] {
 
 .link-to-submit {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
   bottom: 0;
   left: 0;
   width: 100%;
-  min-height: 0;
-  padding: 20px 20px 25px;
-  background: rgb(74, 138, 139);
-  color: rgb(255, 255, 255);
-  line-height: 100%;
-  vertical-align: bottom;
-  letter-spacing: 0.15em;
-  text-transform: uppercase;
-  text-decoration: none;
-  transition: min-height 0.75s, opacity 0.75s, left 0s, margin-left 0s, color 0.25s;
-  &:before {
-    content: ' ';
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    height: 50px;
-    width: 150%;
-    margin-left: -75%;
-    margin-bottom: -40px;
+  transition: left 0s;
+  
+  div {
+    margin-top: 11px;
     background: rgb(74, 138, 139);
-    border-top-left-radius: 100%;
-    border-top-right-radius: 100%;
-    transition: all 0.75s;
-    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 20px 20px 25px;
+    color: rgb(255, 255, 255);
+    position: relative;
+    transition: min-height 0.75s, opacity 0.75s, margin-left 0s, color 0.25s;
+    min-height: 0;
+    line-height: 100%;
+    vertical-align: bottom;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    text-decoration: none;
+    width: 100%;
+    
+    &:before {
+      content: ' ';
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      height: 50px;
+      width: 150%;
+      margin-left: -75%;
+      margin-bottom: -40px;
+      background: rgb(74, 138, 139);
+      border-top-left-radius: 100%;
+      border-top-right-radius: 100%;
+      transition: all 0.75s;
+      z-index: 100; 
+    }
   }
 
   body.loading-new-page & {
-    min-height: 100%;
-    opacity: 0;
-    color: rgb(74, 138, 139);
-    transition: min-height 0.75s, opacity 0.25s 0.5s, left 0s 0.75s, margin-left 0s 0.75s, color 0.25s;
     left: 100%;
-    margin-left: 0;
-    &:before {
-      height: 600px;
+    transition: left 0s 0.75s;
+    overflow: visible;
+    
+    div {
+      min-height: 100%;
+      opacity: 0;
+      color: rgb(74, 138, 139);
+      transition: min-height 0.75s, opacity 0.25s 0.5s, margin-left 0s 0.75s, color 0.25s;
+      margin-left: 0;
+      &:before {
+        height: 600px;
+      }
     }
   }
 
