--- a/css/parts/_header.css
+++ b/css/parts/_header.css
@@ -20,6 +20,8 @@
     }
     .container {
       max-width: 1920px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .header__logo {
       text-indent: -9999em;
